// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@Header should add header metadata for methods and classes on RestControllers 1`] = `
Object {
  "filters": Array [],
  "guards": Array [],
  "headers": Object {
    "bar": "baz",
  },
  "metaData": Object {},
  "paramaters": Array [],
  "path": "/",
  "propertyKey": "test",
}
`;

exports[`@Header should add header metadata for methods and classes on RestControllers 2`] = `
Object {
  "filters": Array [],
  "guards": Array [],
  "headers": Object {
    "foo": "bar",
  },
  "metaData": Object {},
}
`;
